# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
#

2004-11-30 20:16:36 GMT	John Goerzen <jgoerzen@complete.org>	patch-130

    Summary:
      More rearranging
    Revision:
      missingh--head--0.5--patch-130


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser.hs
     libsrc/MissingH/ConfigParser/Types.hs
     testsrc/ConfigParser/Maintest.hs


2004-11-30 20:12:08 GMT	John Goerzen <jgoerzen@complete.org>	patch-129

    Summary:
      Moved some stuff out of CP typse that didn't belong there anyway
    Revision:
      missingh--head--0.5--patch-129


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser.hs
     libsrc/MissingH/ConfigParser/Types.hs


2004-11-30 20:01:53 GMT	John Goerzen <jgoerzen@complete.org>	patch-128

    Summary:
      Added tests for no default situation
    Revision:
      missingh--head--0.5--patch-128


    modified files:
     ChangeLog testsrc/ConfigParser/Maintest.hs


2004-11-30 18:45:21 GMT	John Goerzen <jgoerzen@complete.org>	patch-127

    Summary:
      Updated tests
    Revision:
      missingh--head--0.5--patch-127


    modified files:
     ChangeLog testsrc/Bitstest.hs testsrc/FiniteMaptest.hs
     testsrc/Listtest.hs testsrc/MIMETypestest.hs


2004-11-30 18:38:47 GMT	John Goerzen <jgoerzen@complete.org>	patch-126

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-126


    modified files:
     ChangeLog cpexample1.hs debian/changelog


2004-11-30 17:24:30 GMT	John Goerzen <jgoerzen@complete.org>	patch-125

    Summary:
      Checkpointing test conversions
    Revision:
      missingh--head--0.5--patch-125


    modified files:
     ChangeLog testsrc/MIMETypestest.hs testsrc/Pathtest.hs
     testsrc/Printftest.hs testsrc/Strtest.hs testsrc/Testutil.hs


2004-11-30 16:32:17 GMT	John Goerzen <jgoerzen@complete.org>	patch-124

    Summary:
      More tests and fixes
    Revision: