@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
 #
 
+2004-11-30 20:34:05 GMT	John Goerzen <jgoerzen@complete.org>	patch-131
+
+    Summary:
+      Added some CP docs
+    Revision:
+      missingh--head--0.5--patch-131
+
+
+    modified files:
+     ChangeLog libsrc/MissingH/ConfigParser.hs
+
+
 2004-11-30 20:16:36 GMT	John Goerzen <jgoerzen@complete.org>	patch-130
 
     Summary:
